<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_drone</name>
  <version>0.0.0</version>
  <description>Standalone PX4 offboard control package</description>
  <maintainer email="steve_thomas92@hotmail.com">linux</maintainer>
  <license>Apache-2.0</license>

  <!-- Needed for building-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Provides ros2 env variables -->
  <build_depend>ros_environment</build_depend>
  
  <!-- Builtins needed for Time and duration +
  Custom new msgs, srvs within module -->
  <depend>builtin_interfaces</depend> 
  
  <!-- ROS 2 C++ API-->
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
